# mips-simulator

./: .gitignore  CMakeLists.txt  README.md  TODO.md  __main__.py  assembler_test.py  program.asm  program.txt  tests.py
config/: config.json  messages_eng.json  messages_ita.json
gui/: console.py  console_dialog.py  main_dialog.py  terminal.py
include/: ALU.h  ControlUnit.h  Datapath.h  Instruction.h  Memory.h  RegisterFile.h  exceptions.h  opcodes.h  utils.h
libs/: ALU.py  Datapath.py  Instructions.py  Memory.py  RegisterFile.py  Simulator.py  alu.py  alu_operations.py  assembler.py  constants.py  datapath.py  exceptions.py  instructions.py  memory.py  message_manager.py  register_file.py  simulator.py  utils.py
src/: a.out  main  main.cpp
tests/: test.c++
